December 10 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Sophos' bad pray effect changed (now works!)
	* Dipping in frozen fountains no longer works
	* Snakes are a bit slower
	* Fixed last problems (I feel like an optimist) in makefile generation.
	* NEWS updated
	
December 10 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Overall difficulty lowered by 33%
	* Fixed one type

December 10 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Whips' durability descriptions are no longer shown in the inventory screen
	* Price balancing
	* Increased the force kicks give to items when sending them to flight
	* Kicking chests now prints less "THUMP"s
	* Tweaked the lock breaking algorithm of chests
	* Corrected two bugs in the wand of locking code
	* The game no longer crashes when Atavus or Cruentus destroys a chest
	* Added some information about genetrix vesana's origin to Kaethos's replies

December 10 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Wishing for a (special) boot or gauntlet now yields a pair
	* Loricatus can now change the material of two identical gauntlets/boots
	  if they are placed to both hands simultaneously before praying
	* Item-affecting scrolls now handle gauntlets/boots as pairs, so for
	  example a scroll of enchant armor will give the +1 bonus to both items
	* Zapping chargeless wands and bananas no longer trains perception, since
	  this could be abused
	* Valpurus's Justifier and the Shirt of the Golden Eagle can no longer be
	  enchanted further under any circumstances (why wouldn't Petrus have done it
	  already?)
	* There is now a chance of failure if one tries to enchant items beyound +5

December 10 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Praying to Loricatus while wielding a corpse no longer crashes
	* Added unique replies for patrol guards
	* Patrol guards now use helmets of piercing perception and rings of infravision
	* Moving is now 25% faster when panicked
	* All guard and dark knight configurations look now different