@@ -135,29 +135,31 @@ human
 	NameSingular = "human";
 	Inventory == encryptedscroll;
 
-	DefaultArmStrength = 25;
-	DefaultLegStrength = 25;
-	DefaultDexterity = 22;
-	DefaultAgility = 22;
-	DefaultEndurance = 22;
-	DefaultPerception = 20;
-	DefaultIntelligence = 10;
-	DefaultWisdom = 10;
-	DefaultCharisma = 10;
-	DefaultMana = 10;
-	Helmet = MITHRIL helmet(FULL_HELMET);
-	BodyArmor = MITHRIL bodyarmor(PLATE_MAIL) { Enchantment = 1; }
-	Cloak = PHOENIX_FEATHER cloak { Enchantment = 1; }
-	Belt = NYMPH_HAIR belt;
-	RightWielded = mjolak { Enchantment = 2; }
+	/*DefaultArmStrength = 45;
+	DefaultLegStrength = 45;
+	DefaultDexterity = 35;
+	DefaultAgility = 35;
+	DefaultEndurance = 35;
+	DefaultPerception = 30;
+	DefaultIntelligence = 20;
+	DefaultWisdom = 20;
+	DefaultCharisma = 20;
+	DefaultMana = 20;
+	Helmet = RUBY helmet { Enchantment = 3; }
+	Amulet = amulet(AMULET_OF_LIFE_SAVING);
+	BodyArmor = MITHRIL bodyarmor(PLATE_MAIL) { Enchantment = 3; }
+	Cloak = ANGEL_HAIR cloak { Enchantment = 3; }
+	Belt = RUBY belt { Enchantment = 3; }
+	RightWielded = MITHRIL MITHRIL meleeweapon(TWO_HANDED_SWORD) { Enchantment = 4; }
+	RightGauntlet = PHOENIX_FEATHER gauntlet(GAUNTLET_OF_DEXTERITY) { Enchantment = 3; }
 	RightRing = ring(RING_OF_INFRA_VISION);
-	RightGauntlet = NYMPH_HAIR gauntlet(GAUNTLET_OF_DEXTERITY) { Enchantment = 1; }
-	RightBoot = NYMPH_HAIR boot(BOOT_OF_AGILITY) { Enchantment = 1; }
-	KnownCWeaponSkills = { 2, MACES, SHIELDS; }
-	CWeaponSkillHits = { 2, 200, 75; }
-	RightSWeaponSkillHits = 200;
-	LeftSWeaponSkillHits = 200;
-	Inventory = { 7, wandofstriking, wandoffireballs, wandofhaste, mine, beartrap, stethoscope, oillamp; }
+	LeftRing = ring(RING_OF_TELEPORT_CONTROL);
+	RightBoot = PHOENIX_FEATHER boot(BOOT_OF_AGILITY) { Enchantment = 3; }
+	KnownCWeaponSkills = { 3, MACES, LARGE_SWORDS, SHIELDS; }
+	CWeaponSkillHits = { 3, 1000, 1000, 1000; }
+	RightSWeaponSkillHits = 500;
+	LeftSWeaponSkillHits = 500;
+	Inventory = { 7, wandofstriking, wandoffireballs, wandofhaste, mine, beartrap, stethoscope, oillamp; }*/
 }
 
 petrus
@@ -843,7 +845,7 @@ frog
 elpuri
 {
 	DefaultArmStrength = 70;
-	DefaultAgility = 25;
+	DefaultAgility = 20;
 	DefaultEndurance = 20;
 	DefaultPerception = 40;
 	DefaultIntelligence = 40;
