@@ -1,3 +1,7 @@
+December 10 2002 Timo Kiviluoto <sonor@phpoint.fi>
+
+	* Added a terrible gum solution to fix the unicorns kicking
+
 December 10 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
 	* Sophos' bad pray effect changed (now works!)
